# winzy-pdf-crop

./: README.md  pyproject.toml
tests/: test_winzy_pdf_crop.py
winzy_pdf_crop/: __init__.py
