[project]
name = "winzy-pdf-crop"
version = "0.1.0"
description = "Get images from pdf"
readme = "README.md"
authors = [{ name = "Sukhbinder Singh" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["winzy", "PyMuPDF", "winzy-convert"]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-pdf-crop"
Changelog = "https://github.com/sukhbinder/winzy-pdf-crop/releases"
Issues = "https://github.com/sukhbinder/winzy-pdf-crop/issues"
CI = "https://github.com/sukhbinder/winzy-pdf-crop/actions"

[project.entry-points."winzy.plugins"]
pdfcrop = "winzy_pdf_crop:pdfcrop_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
